src/main/java/de/abrandl/regex/grammar/RegexParser.java
// $ANTLR 3.4 /home/abrandl/Dropbox/ma-thesis/workspace/lucene.regex/src/main/java/de/abrandl/regex/grammar/Regex.g 2013-10-21 16:22:55

package de.abrandl.regex.grammar;
import de.abrandl.regex.grammar.tree.RegexNode;

/*
* Based on insights (and partly also grammar code) taken from
* https://github.com/bkiers/PCREParser
*/


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class RegexParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ALC", "ALTERNATIVE", "AUC", "AlphaNumeric", "Ampersand", "At", "BLC", "BUC", "Backslash", "BlockQuoted", "CHARACTER_CLASS", "CLC", "CONCATENATION", "CUC", "Caret", "CarriageReturn", "CloseBrace", "CloseBracket", "CloseParen", "Colon", "Comma", "D0", "D1", "D2", "D3", "D4", "D5", "D6", "D7", "D8", "D9", "DLC", "DOTANY", "DUC", "Dollar", "Dot", "DoubleQuote", "ELC", "ELEMENT", "EUC", "Equals", "Exclamation", "FLC", "FUC", "GLC", "GROUP", "GUC", "GraveAccent", "GreaterThan", "HLC", "HUC", "Hash", "Hyphen", "ILC", "IUC", "JLC", "JUC", "KLC", "KUC", "LITERAL", "LLC", "LUC", "LessThan", "MLC", "MUC", "NLC", "NUC", "NewLine", "NonAlphaNumeric", "OLC", "ONEORMORE", "OPTIONAL", "OUC", "OpenBrace", "OpenBracket", "OpenParen", "PLC", "PUC", "Percent", "Pipe", "Plus", "QLC", "QUC", "QuestionMark", "Quoted", "RANGE", "RLC", "RUC", "SLC", "SUC", "Semicolon", "SingleQuote", "Slash", "Star", "TLC", "TUC", "Tab", "Tilde", "ULC", "UUC", "Underscore", "VLC", "VUC", "WHITESPACE", "WLC", "WUC", "XLC", "XUC", "YLC", "YUC", "ZEROORMORE", "ZLC", "ZUC"
    };

    public static final int EOF=-1;
    public static final int ALC=4;
    public static final int ALTERNATIVE=5;
    public static final int AUC=6;
    public static final int AlphaNumeric=7;
    public static final int Ampersand=8;
    public static final int At=9;
    public static final int BLC=10;
    public static final int BUC=11;
    public static final int Backslash=12;
    public static final int BlockQuoted=13;
    public static final int CHARACTER_CLASS=14;
    public static final int CLC=15;
    public static final int CONCATENATION=16;
    public static final int CUC=17;
    public static final int Caret=18;
    public static final int CarriageReturn=19;
    public static final int CloseBrace=20;
    public static final int CloseBracket=21;
    public static final int CloseParen=22;
    public static final int Colon=23;
    public static final int Comma=24;
    public static final int D0=25;
    public static final int D1=26;
    public static final int D2=27;
    public static final int D3=28;
    public static final int D4=29;
    public static final int D5=30;
    public static final int D6=31;
    public static final int D7=32;
    public static final int D8=33;
    public static final int D9=34;
    public static final int DLC=35;
    public static final int DOTANY=36;
    public static final int DUC=37;
    public static final int Dollar=38;
    public static final int Dot=39;
    public static final int DoubleQuote=40;
    public static final int ELC=41;
    public static final int ELEMENT=42;
    public static final int EUC=43;
    public static final int Equals=44;
    public static final int Exclamation=45;
    public static final int FLC=46;
    public static final int FUC=47;
    public static final int GLC=48;
    public static final int GROUP=49;
    public static final int GUC=50;
    public static final int GraveAccent=51;
    public static final int GreaterThan=52;
    public static final int HLC=53;
    public static final int HUC=54;
    public static final int Hash=55;
    public static final int Hyphen=56;
    public static final int ILC=57;
    public static final int IUC=58;
    public static final int JLC=59;
    public static final int JUC=60;
    public static final int KLC=61;
    public static final int KUC=62;
    public static final int LITERAL=63;
    public static final int LLC=64;
    public static final int LUC=65;
    public static final int LessThan=66;
    public static final int MLC=67;
    public static final int MUC=68;
    public static final int NLC=69;
    public static final int NUC=70;
    public static final int NewLine=71;
    public static final int NonAlphaNumeric=72;
    public static final int OLC=73;
    public static final int ONEORMORE=74;
    public static final int OPTIONAL=75;
    public static final int OUC=76;
    public static final int OpenBrace=77;
    public static final int OpenBracket=78;
    public static final int OpenParen=79;
    public static final int PLC=80;
    public static final int PUC=81;
    public static final int Percent=82;
    public static final int Pipe=83;
    public static final int Plus=84;
    public static final int QLC=85;
    public static final int QUC=86;
    public static final int QuestionMark=87;
    public static final int Quoted=88;
    public static final int RANGE=89;
    public static final int RLC=90;
    public static final int RUC=91;
    public static final int SLC=92;
    public static final int SUC=93;
    public static final int Semicolon=94;
    public static final int SingleQuote=95;
    public static final int Slash=96;
    public static final int Star=97;
    public static final int TLC=98;
    public static final int TUC=99;
    public static final int Tab=100;
    public static final int Tilde=101;
    public static final int ULC=102;
    public static final int UUC=103;
    public static final int Underscore=104;
    public static final int VLC=105;
    public static final int VUC=106;
    public static final int WHITESPACE=107;
    public static final int WLC=108;
    public static final int WUC=109;
    public static final int XLC=110;
    public static final int XUC=111;
    public static final int YLC=112;
    public static final int YUC=113;
    public static final int ZEROORMORE=114;
    public static final int ZLC=115;
    public static final int ZUC=116;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public RegexParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public RegexParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return RegexParser.tokenNames; }
    public String getGrammarFileName() { return "/home/abrandl/Dropbox/ma-thesis/workspace/lucene.regex/src/main/java/de/abrandl/regex/grammar/Regex.g"; }


    private RegexParsingException exception = null;

    @Override
    public void displayRecognitionError(String[] tokenNames, RecognitionException e) {
    	String hdr = getErrorHeader(e);
    	String msg = getErrorMessage(e, tokenNames);
    	exception = new RegexParsingException(hdr + ":" + msg);
    }

    public void checkErrors() throws RegexParsingException {
    	if (exception != null) {
    		throw exception;
    	}
    }

    /**
     * Parses a given regex into an abstract parse tree.
     * @param regex regular expression
     * @returns parse tree of given regex
     * @throws RegexParsingException when an invalid/unrecognized regex was given
     **/
    public static RegexNode parse(String regex) throws RegexParsingException {
    	return RegexTreeTransformer.parse(regex).getRegexTree();
    }


    public static class parse_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "parse"
    // /home/abrandl/Dropbox/ma-thesis/workspace/lucene.regex/src/main/java/de/abrandl/regex/grammar/Regex.g:82:1: parse : ( regex EOF -> regex | subject_boundary );
    public final RegexParser.parse_return parse() throws RecognitionException {
        RegexParser.parse_return retval = new RegexParser.parse_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token EOF2=null;
        RegexParser.regex_return regex1 =null;

        RegexParser.subject_boundary_return subject_boundary3 =null;


        Object EOF2_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_regex=new RewriteRuleSubtreeStream(adaptor,"rule regex");
        try {
            // /home/abrandl/Dropbox/ma-thesis/workspace/lucene.regex/src/main/java/de/abrandl/regex/grammar/Regex.g:83:3: ( regex EOF -> regex | subject_boundary )
            int alt1=2;
            switch ( input.LA(1) ) {
            case ALC:
            case AUC:
            case BLC:
            case BUC:
            case CLC:
            case CUC:
            case DLC:
            case DUC:
            case ELC:
            case EUC:
            case FLC:
            case FUC:
            case GLC:
            case GUC:
            case HLC:
            case HUC:
            case ILC:
            case IUC:
            case JLC:
            case JUC:
            case KLC:
            case KUC:
            case LLC:
            case LUC:
            case MLC:
            case MUC:
            case NLC:
            case NUC:
            case OLC:
            case OUC:
            case PLC:
            case PUC:
            case QLC:
            case QUC:
            case RLC:
            case RUC:
            case SLC:
            case SUC:
            case TLC:
            case TUC:
            case ULC:
            case UUC:
            case VLC:
            case VUC:
            case WLC:
            case WUC:
            case XLC:
            case XUC:
            case YLC:
            case YUC:
            case ZLC:
            case ZUC:
                {
                int LA1_1 = input.LA(2);

                if ( (synpred1_Regex()) ) {
                    alt1=1;
                }
                else if ( (true) ) {
                    alt1=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 1, 1, input);

                    throw nvae;

                }
                }
                break;
            case D0:
            case D1:
            case D2:
            case D3:
            case D4:
            case D5:
            case D6:
            case D7:
            case D8:
            case D9:
                {
                int LA1_2 = input.LA(2);

                if ( (synpred1_Regex()) ) {
                    alt1=1;
                }
                else if ( (true) ) {
                    alt1=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 1, 2, input);

                    throw nvae;

                }
                }
                break;
            case Ampersand:
            case At:
            case Backslash:
            case Colon:
            case Comma:
            case DoubleQuote:
            case Equals:
            case Exclamation:
            case GraveAccent:
            case GreaterThan:
            case Hash:
            case Hyphen:
            case LessThan:
            case Semicolon:
            case SingleQuote:
            case Slash:
            case Tilde:
            case Underscore:
                {
                int LA1_3 = input.LA(2);

                if ( (synpred1_Regex()) ) {
                    alt1=1;
                }
                else if ( (true) ) {
                    alt1=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 1, 3, input);

                    throw nvae;

                }
                }
                break;
            case CarriageReturn:
            case NewLine:
            case Tab:
            case WHITESPACE:
                {
                int LA1_4 = input.LA(2);

                if ( (synpred1_Regex()) ) {
                    alt1=1;
                }
                else if ( (true) ) {
                    alt1=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 1, 4, input);

                    throw nvae;

                }
                }
                break;
            case Quoted:
                {
                int LA1_5 = input.LA(2);

                if ( (synpred1_Regex()) ) {
                    alt1=1;
                }
                else if ( (true) ) {
                    alt1=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 1, 5, input);

                    throw nvae;

                }
                }
                break;
            case BlockQuoted:
                {
                int LA1_6 = input.LA(2);

                if ( (synpred1_Regex()) ) {
                    alt1=1;
                }
                else if ( (true) ) {
                    alt1=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 1, 6, input);

                    throw nvae;

                }
                }
                break;
            case OpenParen:
                {
                int LA1_7 = input.LA(2);

                if ( (synpred1_Regex()) ) {
                    alt1=1;
                }
                else if ( (true) ) {
                    alt1=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 1, 7, input);

                    throw nvae;

                }
                }
                break;
            case Dot:
                {
                int LA1_8 = input.LA(2);

                if ( (synpred1_Regex()) ) {
                    alt1=1;
                }
                else if ( (true) ) {
                    alt1=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 1, 8, input);

                    throw nvae;

                }
                }
                break;
            case OpenBracket:
                {
                int LA1_9 = input.LA(2);

                if ( (synpred1_Regex()) ) {
                    alt1=1;
                }
                else if ( (true) ) {
                    alt1=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 1, 9, input);

                    throw nvae;

                }
                }
                break;
            case Pipe:
                {
                int LA1_10 = input.LA(2);

                if ( (synpred1_Regex()) ) {
                    alt1=1;
                }
                else if ( (true) ) {
                    alt1=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 1, 10, input);

                    throw nvae;

                }
                }
                break;
            case EOF:
                {
                alt1=1;
                }
                break;
            case Caret:
            case Dollar:
                {
                alt1=2;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;

            }

            switch (alt1) {
                case 1 :
                    // /home/abrandl/Dropbox/ma-thesis/workspace/lucene.regex/src/main/java/de/abrandl/regex/grammar/Regex.g:84:3: regex EOF
                    {
                    pushFollow(FOLLOW_regex_in_parse151);
                    regex1=regex();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_regex.add(regex1.getTree());

                    EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_parse153); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_EOF.add(EOF2);


                    // AST REWRITE
                    // elements: regex
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {

                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 85:5: -> regex
                    {
                        adaptor.addChild(root_0, stream_regex.nextTree());

                    }


                    retval.tree = root_0;
                    }

                    }
                    break;
                case 2 :
                    // /home/abrandl/Dropbox/ma-thesis/workspace/lucene.regex/src/main/java/de/abrandl/regex/grammar/Regex.g:86:5: subject_boundary
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_subject_boundary_in_parse167);
                    subject_boundary3=subject_boundary();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, subject_boundary3.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "parse"


    public static class regex_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "regex"
    // /home/abrandl/Dropbox/ma-thesis/workspace/lucene.regex/src/main/java/de/abrandl/regex/grammar/Regex.g:93:1: regex : ( first_alternative -> first_alternative ) ( ( '|' concatenation )+ -> ^( ALTERNATIVE first_alternative ( concatenation )+ ) )? ;
    public final RegexParser.regex_return regex() throws RecognitionException {
        RegexParser.regex_return retval = new RegexParser.regex_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal5=null;
        RegexParser.first_alternative_return first_alternative4 =null;

        RegexParser.concatenation_return concatenation6 =null;


        Object char_literal5_tree=null;
        RewriteRuleTokenStream stream_Pipe=new RewriteRuleTokenStream(adaptor,"token Pipe");
        RewriteRuleSubtreeStream stream_first_alternative=new RewriteRuleSubtreeStream(adaptor,"rule first_alternative");
        RewriteRuleSubtreeStream stream_concatenation=new RewriteRuleSubtreeStream(adaptor,"rule concatenation");
        try {
            // /home/abrandl/Dropbox/ma-thesis/workspace/lucene.regex/src/main/java/de/abrandl/regex/grammar/Regex.g:94:3: ( ( first_alternative -> first_alternative ) ( ( '|' concatenation )+ -> ^( ALTERNATIVE first_alternative ( concatenation )+ ) )? )
            // /home/abrandl/Dropbox/ma-thesis/workspace/lucene.regex/src/main/java/de/abrandl/regex/grammar/Regex.g:95:3: ( first_alternative -> first_alternative ) ( ( '|' concatenation )+ -> ^( ALTERNATIVE first_alternative ( concatenation )+ ) )?
            {
            // /home/abrandl/Dropbox/ma-thesis/workspace/lucene.regex/src/main/java/de/abrandl/regex/grammar/Regex.g:95:3: ( first_alternative -> first_alternative )
            // /home/abrandl/Dropbox/ma-thesis/workspace/lucene.regex/src/main/java/de/abrandl/regex/grammar/Regex.g:95:4: first_alternative
            {
            pushFollow(FOLLOW_first_alternative_in_regex187);
            first_alternative4=first_alternative();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_first_alternative.add(first_alternative4.getTree());

            // AST REWRITE
            // elements: first_alternative
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 96:7: -> first_alternative
            {
                adaptor.addChild(root_0, stream_first_alternative.nextTree());

            }


            retval.tree = root_0;
            }

            }


            // /home/abrandl/Dropbox/ma-thesis/workspace/lucene.regex/src/main/java/de/abrandl/regex/grammar/Regex.g:97:3: ( ( '|' concatenation )+ -> ^( ALTERNATIVE first_alternative ( concatenation )+ ) )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==Pipe) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // /home/abrandl/Dropbox/ma-thesis/workspace/lucene.regex/src/main/java/de/abrandl/regex/grammar/Regex.g:98:5: ( '|' concatenation )+
                    {
                    // /home/abrandl/Dropbox/ma-thesis/workspace/lucene.regex/src/main/java/de/abrandl/regex/grammar/Regex.g:98:5: ( '|' concatenation )+
                    int cnt2=0;
                    loop2:
                    do {
                        int alt2=2;
                        int LA2_0 = input.LA(1);

                        if ( (LA2_0==Pipe) ) {
                            alt2=1;
                        }


                        switch (alt2) {
                    	case 1 :
                    	    // /home/abrandl/Dropbox/ma-thesis/workspace/lucene.regex/src/main/java/de/abrandl/regex/grammar/Regex.g:98:6: '|' concatenation
                    	    {
                    	    char_literal5=(Token)match(input,Pipe,FOLLOW_Pipe_in_regex209); if (state.failed) return retval; 
                    	    if ( state.backtracking==0 ) stream_Pipe.add(char_literal5);


                    	    pushFollow(FOLLOW_concatenation_in_regex211);
                    	    concatenation6=concatenation();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) stream_concatenation.add(concatenation6.getTree());

                    	    }
                    	    break;

                    	default :
                    	    if ( cnt2 >= 1 ) break loop2;
                    	    if (state.backtracking>0) {state.failed=true; return retval;}
                                EarlyExitException eee =
                                    new EarlyExitException(2, input);
                                throw eee;
                        }
                        cnt2++;
                    } while (true);


                    // AST REWRITE
                    // elements: first_alternative, concatenation
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {

                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 99:7: -> ^( ALTERNATIVE first_alternative ( concatenation )+ )
                    {
                        // /home/abrandl/Dropbox/ma-thesis/workspace/lucene.regex/src/main/java/de/abrandl/regex/grammar/Regex.g:100:9: ^( ALTERNATIVE first_alternative ( concatenation )+ )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(
                        (Object)adaptor.create(ALTERNATIVE, "ALTERNATIVE")
                        , root_1);

                        adaptor.addChild(root_1, stream_first_alternative.nextTree());

                        if ( !(stream_concatenation.hasNext()) ) {
                            throw new RewriteEarlyExitException();
                        }
                        while ( stream_concatenation.hasNext() ) {
                            adaptor.addChild(root_1, stream_concatenation.nextTree());

                        }
                        stream_concatenation.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;
                    }

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "regex"


    public static class first_alternative_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "first_alternative"
    // /home/abrandl/Dropbox/ma-thesis/workspace/lucene.regex/src/main/java/de/abrandl/regex/grammar/Regex.g:104:1: first_alternative : concatenation ;
    public final RegexParser.first_alternative_return first_alternative() throws RecognitionException {
        RegexParser.first_alternative_return retval = new RegexParser.first_alternative_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        RegexParser.concatenation_return concatenation7 =null;


